--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.0.4",
+    "@angular-devkit/core": "^13.0.4",
     "@angular/cli": "^13.0.4",
     "@angular/compiler-cli": "^13.0.3",
     "@angular/language-service": "~7.2.0",
